--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-asgiref==3.7.1
-dj-database-url==2.0.0
-Django==4.2.1
-django-appconf==1.0.5
-django-avatar==7.1.1
-django-ckeditor==6.5.1
-django-gravatar==0.1.0
-django-gravatar2==1.4.4
-django-js-asset==2.0.0
-dnspython==2.3.0
-gravatar==0.1
-gunicorn==20.1.0
-Pillow==9.5.0
-psycopg2-binary==2.9.6
-python-dotenv==1.0.0
-sqlparse==0.4.4
-typing_extensions==4.6.2
-tzdata==2023.3
-whitenoise==6.4.0
+asgiref
+dj-database-url
+Django
+django-appconf
+django-avatar
+django-ckeditor
+django-gravatar
+django-gravatar2
+django-js-asset
+dnspython
+gravatar
+gunicorn
+Pillow
+psycopg2-binary
+python-dotenv
+sqlparse
+typing_extensions
+tzdata
+whitenoise
